--- a/polo-fashions/package.json
+++ b/polo-fashions/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
+    "antd": "^6.1.1",
     "axios": "^1.13.2",
-    "bootstrap": "^5.3.8",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
-    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1"
   },
