--- a/polo-fashions/public/manifest.json
+++ b/polo-fashions/public/manifest.json
@@ -8,28 +8,16 @@
   "theme_color": "#003366",
   "icons": [
     {
-      "src": "icons/manifest-icon-192.maskable.png",
+      "src": "/new-icon.jpg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/jpeg",
       "purpose": "any"
     },
     {
-      "src": "icons/manifest-icon-192.maskable.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "icons/manifest-icon-512.maskable.png",
+      "src": "/new-icon.jpg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/jpeg",
       "purpose": "any"
-    },
-    {
-      "src": "icons/manifest-icon-512.maskable.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
     }
   ]
 }
